Contrast of images is no longer modified if dark mode is on

--- a/global_stylesheet.css
+++ b/global_stylesheet.css
@@ -167,6 +167,6 @@ a {
     }
 
     img {
-        filter: brightness(0.8) contrast(1.2);
+        filter: brightness(0.85);
     }
 }
